--- a/css/catalog.css
+++ b/css/catalog.css
@@ -71,6 +71,7 @@
 	}
 	.head {
 		margin: 30px 0 0 25px;
+		border-radius: 50px;
 	}
 	.screen .a_author {
 		text-align: center;
@@ -490,9 +491,10 @@
 			color: #535353;
 			cursor: pointer;
 		}
-		    .index .text_reading span:hover {
-		       background-color: #EEEEEE;
-		       }
+		.index .text_reading span:hover {
+		  background-color: #EEEEEE;
+	  }
+
 		.index .text_reading .text_card {
 			margin: 5px 0 0 8px ;
 		}
@@ -523,11 +525,12 @@
 			float: left;
 		}
 		.index .text_mark {
-			width: 9px;
-			height: 18px;
-			background-color: #ea4d5c;
-			border-radius: 4px;
-			margin: 0 7px 0 0;
+			width: 7px;
+			height: 16px;
+			background-color: #00A1D6;
+			border-radius: 3px;
+			margin: 2px 7px 0 0;
+			
 		}
 		.index .text_chapter {
 			border-bottom: 1px solid #ececec;
@@ -553,12 +556,13 @@
 			padding-left: 10px;
 			width: 150px;
 		}
-		.index .text_chapter   span {
+		.index .text_chapter span {
 				width: 5px;
 				height: 14px;
-				background-color: #f79ea7;
+				background-color: #3DB2D8;
 				display: inline-block;
 				margin-right: 5px;
+				border-radius: 2px;
 				
 		}
 		.index .text_Catalog a {
