--- a/css/user_info.css
+++ b/css/user_info.css
@@ -1165,33 +1165,46 @@
 	width: 652px;
 	height: 150px;
 	float: left;
+	
 }
 
 .up {
-	width: 652px;
+	width: 642px;
 	display: inline-block;
-	padding: 20px 0 0 10px;
-	height: 20px;
+	padding: 15px 0 0 10px;
+	height: 35px;
+	line-height: 35px;
+    position: relative;
+  white-space: nowrap;
 }
 
 .messageAI .up .up-name {
-	margin: 0 15px 0 10px;
+	margin: 0 0px 0 10px;
 	font-size: 20px;
 	color: #3db2d8;
+	width: 200px;
+  overflow: hidden;
+  
 }
-
+.up ul{
+  display: inline-block;
+  position: absolute;
+  top: 14px;
+  left: 210px;
+}
 .up .up-word {
-	margin: 0 0px 0 30px;
-	font-size: 20px;
+	margin: 0 25px 0 0px;
+	font-size: 18px;
 	cursor: pointer;
+	float: right;
 }
 
 .centreAI {
-	padding: 25px 0 0 10px;
+	padding: 15px 0 0 10px;
 }
 
 .centreAI .font {
-	margin: 20px 0 0 5px;
+	margin: 20px 20px 0 5px;
 }
 
 .centreAI .imgAI1 {
@@ -1406,8 +1419,8 @@
 }
 
 .attention-name .wordAI:hover {
-    border: 1px solid #00A1D6;
-    color:#00A1D6 ;
+    background-color: #00A1D6;
+    color:white ;
 
 }
 
@@ -1427,7 +1440,8 @@
 }
 
 .attention-name .wordAI2:hover {
-    background-color: #00A1D6;
+    border: 1px solid #00A1D6;
+    color: #00A1D6;
     
 
 }
