--- a/view/class.html
+++ b/view/class.html
@@ -141,6 +141,7 @@
 	var vuePractice = new Vue({
 			el: '#app',
 			data: {
+			  bodyFlag: false,
 				pageNo: '',
 				szxj: SZXJ,
 				path: PathList,
