--- a/view/catalog.html
+++ b/view/catalog.html
@@ -55,11 +55,9 @@
   					</ul>   
   					<div class="text_chapter" >
   							<div class="group" v-for="value in obj.contentEntityList">
-  							  <span class="text_sign">
-  							    <a :href="path.TemprootPath + '/view/read_book.html?contentId=' + value.contentId + '&bookId='+ obj.bookId">
-  							      {{ value.contentTitle }}
-  							    </a>
-  							  </span>
+  							  <span class="text_sign"></span><a :href="path.TemprootPath + '/view/read_book.html?contentId=' + value.contentId + '&bookId='+ obj.bookId">
+                      {{ value.contentTitle }}
+                  </a>
   							</div>
   							
   					</div>
