--- a/view/login.html
+++ b/view/login.html
@@ -11,8 +11,8 @@
 	</head>
 	<body id="app">
 		<myheader></myheader>
-		<div style="position: relative;width: 100%;min-width: 1500px;">
-			<img src="../img/background-jpg.jpg" style="margin-top: -55px;width: 100%;"/>
+		<div style="position: relative;width: 100%;min-width: 1200px;">
+			<img src="../img/background-jpg.jpg" style="margin-top: -55px;width: 100%;min-height:768px ;"/>
 			<form class="Login" id="Login">
 				<img src="../img/logo-1.png" class="Login_img"/>
 				<p class="line">
