--- a/view/user_info.html
+++ b/view/user_info.html
@@ -173,7 +173,7 @@
   });
   App.component('myfooter', footer);
   App.component('myheader', header);
-  App.component('alert', alert);
+  App.component('alert', VueAlert);
   router.redirect({
   	'*': 'info',
   });
