--- a/view/Password_rec.html
+++ b/view/Password_rec.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>轻创文学网-密码找回页</title>
+		<title>QC文学网-密码找回页</title>
 	    <link rel="stylesheet" href="../css/main.css" />
      	 <link rel="stylesheet" href="../css/headerOrFooter.css" />
 		
@@ -11,6 +11,7 @@
 	</head>
 	<link rel="stylesheet" href="../css/jquery-ui.min.css" />
 	<body id="app">
+	  <alert v-ref:vue-alert></alert>
 	<myheader></myheader>
 	<div style="position: relative;width: 100%;min-width: 1200px;">
 		<img src="../img/background-jpg.jpg" style="margin-top: -55px;width: 100%;"/>
@@ -20,8 +21,9 @@
 	<script type="text/javascript" src="../js/jquery-1.11.1.js"></script>
 	<script type="text/javascript" src="../js/jquery-ui.min.js" ></script>
 	<script type="text/javascript" src="../js/jquery.validate.js"></script>
-		<script src="../js/apis/vueHttp.js"></script>
-  <script src="../js/apis/conf.js"></script>
+	 <script src="../js/apis/Data.js"></script>
+   <script src="../js/apis/alert.js"></script>
+   <script src="../js/apis/confirm.js"></script>
 	<script type="text/javascript" src="../js/vue.min.js" ></script>
 	<script type="text/javascript" src="../js/components/header.js" ></script>
 	<script type="text/javascript" src="../js/components/footer.js" ></script>
