--- a/view/register.html
+++ b/view/register.html
@@ -2,13 +2,14 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>轻创文学网--注册页</title>
+		<title>QC文学网--注册页</title>
 	</head>
 	<link rel="stylesheet" href="../css/headerOrFooter.css" />
 	<link rel="stylesheet" href="../css/main.css" />
 	<link rel="stylesheet" href="../css/register.css" />
 	<link rel="stylesheet" href="../css/jquery-ui.min.css" />
 	<body id="app">
+	  <alert v-ref:vue-alert></alert>
 	<myheader></myheader>
 	<div style="position: relative;width: 100%;min-width: 1200px;">
 			<img src="../img/background-jpg.jpg" style="margin-top: -55px;width: 100%;min-height: 768px;" />
@@ -56,6 +57,9 @@
 <script type="text/javascript" src="../js/vue-router.min.js" ></script>
 <script type="text/javascript" src="../js/components/header.js" ></script>
 <script type="text/javascript" src="../js/components/footer.js" ></script>
+ <script src="../js/apis/Data.js"></script>
+ <script src="../js/apis/alert.js"></script>
+ <script src="../js/apis/confirm.js"></script>
 <script type="text/javascript" src="../js/require/headerOrfooter.js"></script>  
 
 <script type="text/javascript" src="../js/jquery-1.11.1.js"></script>
