--- a/css/read_book.css
+++ b/css/read_book.css
@@ -42,6 +42,21 @@ font-size:inherit;text-rendering:auto;
 .fa-angle-right:before {
     content: "\F105";
 }
+.read_alert {
+  position: fixed;
+  top: 300px;
+  left: 850px;
+  width: 230px;
+  height: 60px;
+  background-color: white;
+  font-size: 19px;
+  line-height:60px ;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+}
+.read_alert img {
+  vertical-align: middle;
+  margin:15px 15px 15px 25px ;
+}
 .modal-setting label {
 	color:#333;
 	margin-right:20px
