--- a/view/ranking.html
+++ b/view/ranking.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>轻创文学网-排行榜</title>
+		<title>QC文学网-排行榜</title>
   	<link rel="stylesheet" href="../css/ranking.css" />
   	<link rel="stylesheet" href="../css/headerOrFooter.css" />
   	<link rel="stylesheet" href="../css/main.css" />
@@ -10,6 +10,7 @@
   	<link rel="stylesheet" href="../css/jquery-ui.min.css" />
 	</head>
 	<body id="app" v-show="bodyFlag" style="display: none;">
+	  <alert v-ref:vue-alert></alert>
 	  <myheader></myheader>
 	  <div id="background"></div>
 	  <div id="Title">
@@ -96,6 +97,9 @@
  	<script type="text/javascript" src="../js/vue-router.min.js" ></script>
   <script type="text/javascript" src="../js/components/header.js" ></script>
   <script type="text/javascript" src="../js/components/footer.js" ></script>
+   <script src="../js/apis/Data.js"></script>
+   <script src="../js/apis/alert.js"></script>
+   <script src="../js/apis/confirm.js"></script>
   <script type="text/javascript" src="../js/require/headerOrfooter.js"></script>  
 	<script>
 		var indexHtml = new Vue({
