--- a/view/login.html
+++ b/view/login.html
@@ -16,8 +16,8 @@
 		  
 			<img src="../img/background-jpg.jpg" style="margin-top: -55px;width: 100%;min-height:768px ;"/>
 			<form class="Login" id="Login">
-			  <div class="Login_small" >
-				<img src="../img/logo-1.png" class="Login_img"/>
+			  <div class="Login_small"  style="margin-top: 20px;">
+				<img src="../img/logo-1.png" class="Login_img" style="margin-top: -17px;"/>
 				<p class="line">
 					<input  type="password" style="position: absolute; top: -999px" />
 					<input class="input" name="user" placeholder="请输入手机号" autocomplete="off"  color="black"/>
@@ -75,7 +75,7 @@ $(function() {
   // 主URL地址
   // 登入框动态弹出 start
   $('.Login').animate({
-    height: '319px'
+    height: '350px'
   });
   $('.Login').slideDown(1000);
   $("#Login").tooltip({
